--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=18.18.0"
+  },
+  "dependencies": {
+    "@formo/analytics": "^1.8.0"
   }
 }
