fix: setup provider

--- a/packages/foundry/.env.example
+++ b/packages/foundry/.env.example
@@ -13,4 +13,4 @@
 # Although `.env` is ignored by git, it's still important that you don't paste your
 # actual account private key and use the generated one.
 # Default account for localhost / use "scaffold-eth-custom" if you wish to use a generated account or imported account
-ETH_KEYSTORE_ACCOUNT=scaffold-eth-default
+ETH_KEYSTORE_ACCOUNT="" 			# Give your own value for ETH_KEYSTORE_ACCOUNT
