fix: .env.example

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -1,2 +1,2 @@
-FORMO_ANALYTICS_API_KEY ="" 			# Give your own value for FORMO_ANALYTICS_API_KEY 
-FORMO_ANALYTICS_PROJECT_ID ="" 			# Give your own value for FORMO_ANALYTICS_PROJECT_ID 
+FORMO_ANALYTICS_API_KEY =	
+FORMO_ANALYTICS_PROJECT_ID =
